--- a/refs/wildhell.bib
+++ b/refs/wildhell.bib
@@ -1,12 +1,105 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Daniel Buonaiuto at 2024-12-03 10:37:23 -0500 
+%% Created for Elizabeth M Wolkovich at 2024-12-15 11:16:04 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cufar2015variations,
+	author = {{\v{C}}ufar, Katarina and De Luis, Martin and Prislan, Peter and Gri{\v{c}}ar, Jo{\v{z}}ica and {\v{C}}repin{\v{s}}ek, Zalika and Merela, Maks and Kajfe{\v{z}}-Bogataj, Lu{\v{c}}ka},
+	date-added = {2024-12-15 11:15:53 -0500},
+	date-modified = {2024-12-15 11:16:04 -0500},
+	journal = {International journal of biometeorology},
+	pages = {1127--1132},
+	publisher = {Springer},
+	title = {{Do variations in leaf phenology affect radial growth variations in \emph{Fagus sylvatica}?}},
+	volume = {59},
+	year = {2015}}
+
+@article{dow2022warm,
+	author = {Dow, Cameron and Kim, Albert Y and D'Orangeville, Lo{\"\i}c and Gonzalez-Akre, Erika B and Helcoski, Ryan and Herrmann, Valentine and Harley, Grant L and Maxwell, Justin T and McGregor, Ian R and McShea, William J and others},
+	date-added = {2024-12-15 11:15:21 -0500},
+	date-modified = {2024-12-15 11:15:21 -0500},
+	journal = {Nature},
+	number = {7923},
+	pages = {552--557},
+	publisher = {Nature Publishing Group UK London},
+	title = {Warm springs alter timing but not total growth of temperate deciduous trees},
+	volume = {608},
+	year = {2022}}
+
+@article{silvestro2023longer,
+	author = {Silvestro, Roberto and Zeng, Qiao and Butt{\`o}, Valentina and Sylvain, Jean-Daniel and Drolet, Guillaume and Mencuccini, Maurizio and Thiffault, Nelson and Yuan, Shaoxiong and Rossi, Sergio},
+	date-added = {2024-12-15 11:15:04 -0500},
+	date-modified = {2024-12-15 11:15:04 -0500},
+	journal = {Scientific reports},
+	number = {1},
+	pages = {4059},
+	publisher = {Nature Publishing Group UK London},
+	title = {A longer wood growing season does not lead to higher carbon sequestration},
+	volume = {13},
+	year = {2023}}
+
+@article{camarero2022decoupled,
+	author = {Camarero, J Julio and Campelo, Filipe and Colangelo, Michele and Valeriano, Cristina and Knorre, Anastasia and Sol{\'e}, Germ{\'a}n and Rubio-Cuadrado, {\'A}lvaro},
+	date-added = {2024-12-15 11:14:35 -0500},
+	date-modified = {2024-12-15 11:14:35 -0500},
+	journal = {Agricultural and Forest Meteorology},
+	pages = {109223},
+	publisher = {Elsevier},
+	title = {Decoupled leaf-wood phenology in two pine species from contrasting climates: Longer growing seasons do not mean more radial growth},
+	volume = {327},
+	year = {2022}}
+
+@article{aitken2016,
+	author = {Aitken, S. N. and Bemmels, J. B.},
+	date-added = {2024-12-15 11:12:12 -0500},
+	date-modified = {2024-12-15 11:12:12 -0500},
+	journal = {Evol Appl},
+	number = {1},
+	pages = {271-90},
+	title = {Time to get moving: assisted gene flow of forest trees},
+	volume = {9},
+	year = {2016}}
+
+@article{bauerle2012photoperiodic,
+	author = {Bauerle, William L and Oren, Ram and Way, Danielle A and Qian, Song S and Stoy, Paul C and Thornton, Peter E and Bowden, Joseph D and Hoffman, Forrest M and Reynolds, Robert F},
+	date-added = {2024-12-15 11:11:42 -0500},
+	date-modified = {2024-12-15 11:11:42 -0500},
+	journal = {Proceedings of the National Academy of Sciences},
+	number = {22},
+	pages = {8612--8617},
+	publisher = {National Acad Sciences},
+	title = {Photoperiodic regulation of the seasonal pattern of photosynthetic capacity and the implications for carbon cycling},
+	volume = {109},
+	year = {2012}}
+
+@article{soolanayakanahally2013timing,
+	author = {Soolanayakanahally, Raju Y and Guy, Robert D and Silim, Salim N and Song, Minghua},
+	date-added = {2024-12-15 11:10:51 -0500},
+	date-modified = {2024-12-15 11:10:51 -0500},
+	journal = {Plant, cell \& environment},
+	number = {1},
+	pages = {116--127},
+	publisher = {Wiley Online Library},
+	title = {Timing of photoperiodic competency causes phenological mismatch in balsam poplar (Populus balsamifera L.)},
+	volume = {36},
+	year = {2013}}
+
+@article{norby2021comment,
+	author = {Norby, Richard J},
+	date-added = {2024-12-15 11:10:23 -0500},
+	date-modified = {2024-12-15 11:10:23 -0500},
+	journal = {Science},
+	number = {6533},
+	pages = {eabg1438},
+	publisher = {American Association for the Advancement of Science},
+	title = {Comment on ``Increased growing-season productivity drives earlier autumn leaf senescence in temperate trees''},
+	volume = {371},
+	year = {2021}}
 
 @article{AUGSPURGER2005,
 	author = {AUGSPURGER, C. K. and CHEESEMAN, J. M. and SALK, C. F.},
