Sweaved the results and some population figs

--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -36,24 +36,23 @@
 \begin{document}
 \input{phen_framing-concordance}
 
+
 \maketitle
 %\setlength{\parskip}{0.5pt} % 1ex plus 0.5ex minus 0.2ex}
 \setlength{\parindent}{0pt}
 
 %cjc2024Sept25: I think Lizzie and Deirdre already hit the highlights for the Intro for now. I agree that there are paragraphs that need to be moved to the Results and Discussion (anything that includes the figures). I also think you need to set up the experiement a bit better in why it's so cool. A little more development on the latitudinal gradient would be good, even if the results aren't exciting, it'd be great to set up our initial hypothesis more. And maybe get into trees vs shrubs and interannual variation. This was a massive endeavor, I want the reader to be excited about it. 
 
+
+
 \section{Introduction}
 Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, net carbon uptake is primarily determined by the length of the growing season \citep{White1999}. Most models of carbon storage assume that earlier spring leafout with climate change will drive longer seasons and increased carbon storage, in part offsetting future warming \citep{Churkina2005,White1999,Keenan2014}. Recent findings, however, have called this critical assumption into question. 
 
 %emwNov4 -- I would love to get Cat's help on citations in this paragraph (and throughout). I have offered some, but her ideas would be better.
-Recent research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}. Observations have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but other studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}. Recent work has suggested early, increased productivity in the growing seasons drives early senescence \citep{Zani2020}, and proposed include that plants adjust mid-season based on a combination of growing season heat and daylength \citep{Zohner2023}. Such studies, however, are based generally on large-scale satellite measurements and small-scale single species pot experiments, and contrast with findings from long-term large-scale $CO_2$ enrichment studies (cite Norby2021). 
-
-
-
-% Norby2021: 10.1126/science.abg1438
+Recent research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}. Observations have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but other studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}. Recent work has suggested early, increased productivity in the growing seasons drives early senescence \citep{Zani2020}, and proposed include that plants adjust mid-season based on a combination of growing season heat and daylength \citep{Zohner2023}. Such studies, however, are based generally on large-scale satellite measurements and small-scale single species pot experiments, and contrast with findings from long-term large-scale $CO_2$ enrichment studies \citep{norby2021comment}.
 
 %emwNov4 -- This opening used to be more about carbon but I think, given our data, we may want to veer away from C and NPP a bit and just come back to it later.
-These contrasting results suggest fundamental gaps in our understanding of how early-season events (and thermal conditions of the vegetative period?) shape growing season length. How early-season events, such as leafout, affect end-of-season events is poorly understood. While results from satellites (e.g., using NDVI) show a correlation,  what exactly is being measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely if ever have good measures of start and end of season events together. Further, because end-of-season events, are often more locally adapted---with plants using unique photoperiods to cue important events such as budset (CITES)---than start-of-season events, these trends may importantly vary across populations. Such population-level studies, however, are based on a very limited number of species \citep{Zeng2024}. Species generally vary strongly in their start-of-season phenology, with this being a major factor that can influence forecasts \citep{Morales-Castilla2024} and land surface models (CITES). Results to date reporting correlation between start- and end-of-season events generally cannot differentiate between different species, populations or individuals, making our inference limited. 
+These contrasting results suggest fundamental gaps in our understanding of how early-season events (and thermal conditions of the vegetative period?) shape growing season length. How early-season events, such as leafout, affect end-of-season events is poorly understood. While results from satellites (e.g., using NDVI) show a correlation,  what exactly is being measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely if ever have good measures of start and end of season events together. Further, because end-of-season events, are often more locally adapted---with plants using unique photoperiods to cue important events such as budset \citep{bauerle2012photoperiodic,soolanayakanahally2013timing}---than start-of-season events, these trends may importantly vary across populations \citep{aitken2016}. Such population-level studies, however, are based on a very limited number of species \citep{Zeng2024}. Species generally vary strongly in their start-of-season phenology, with this being a major factor that can influence forecasts \citep{Morales-Castilla2024} and land surface models (CITES). Results to date reporting correlation between start- and end-of-season events generally cannot differentiate between different species, populations or individuals, making our inference limited. 
 % Theory suggesting this is driven by different plant strategies in response to abiotic and biotic environmental pressures (CITES), and also predicts that they should vary strongly in end-of-season events ...
 
 %emwNov8 -- I don't love the focus on variation ... we do get into species level variation but am not sure we want to ask this as the major question so I rewrote it, but left old text for now. 
@@ -70,7 +69,7 @@ We address this using rarely available plant-scale data---phenological observati
 
 We found an apparently fundamental---and unexpected trade-off---between early, longer growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearsons correlation coefficient of 0.32 $CI_{95}$[0.25, 0.39]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal, or meteorological, growing season, defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023} (Figure \ref{fig:thermcal}c). 
 
-These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity \citep{Zani2020}. Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig XXa). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth (grephoneCITES). 
+These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity \citep{Zani2020}. Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig: \ref{fig:concept}a,\ref{fig:vapar}). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,camarero2022decoupled,dow2022warm,silvestro2023longer}. % cites from noeviany in whathappened.R in grephon repo
 %The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
 % The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. 
 
@@ -81,9 +80,10 @@ We can see these dynamics play out by tracking the phenology of four individuals
 
 \emph{Variation in leafout and budset}\\
 
-Our common garden captured high variation in both leafout and budset, allowing us to examine how the two correlate, but also providing important insights into how both vary across species, populations and years. Consistent with a high number of studies finding species and year-to-year environmental variation drive leafout variation (CITES), we found high variance in leafout timing among species and years ($\sigma_{species}$: 8.23 $UI_{95}$[5.22,12.81], $\sigma_{year}$:10.49 $UI_{95}$[4.27,24.60], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.62, $UI_{95}$[0.02,2.82], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). %emwNov8: Add something to this paragraph that basically says: this jives with the whole climate change literature documenting big differences in spring and also with meta-analyses of common garden studies (Aitken and Bemmels, me and Zeng) that find leafout is not structured by population. 
+%emwDec15:  If we need it -- CITES here could be our NCC paper this year (Nacho 2024) and/or Deirdre's paper specifically estimates year to year variability, but I would be happy for less self-citing if we have other equally good refs
+Our common garden captured high variation in both leafout and budset, allowing us to examine how the two correlate, but also providing important insights into how both vary across species, populations and years. Consistent with a high number of studies finding species and year-to-year environmental variation drive leafout variation (CITES), we found high variance in leafout timing among species and years ($\sigma_{species}$:8.22 $UI_{95}$[5.28,12.61], $\sigma_{year}$:10.62 $UI_{95}$[4.39,25.23], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.61, $UI_{95}$[0.02,2.6], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). %emwNov8: Add something to this paragraph that basically says: this jives with the whole climate change literature documenting big differences in spring and also with meta-analyses of common garden studies (Aitken and Bemmels, me and Zeng) that find leafout is not structured by population. 
 
-Spring phenological phases are reported to be more plastic than autumn ones (CITES), but we found that, relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$: 9.81 $UI_{95}$[ 6.61,14.49], $\sigma_{year}$: 14.92 $UI_{95}$[5.68,9.21], $\sigma_{population}$: 2.35, $UI_{95}$[0.23,8.51], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population). Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Following trends leafout and our finding that earlier leafout correlates with earlier budset, 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
+Spring phenological phases are reported to be more plastic than autumn ones (CITES), but we found that, relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$:9.84 $UI_{95}$[6.68,14.46], $\sigma_{year}$:15.13 $UI_{95}$[5.66,37.54], $\sigma_{population}$:2.35, $UI_{95}$[0.22,8.2], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population). Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Following trends leafout and our finding that earlier leafout correlates with earlier budset, 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
 
 %emwNov8: Can we put this 3 day number (below paragraph) in context compared to year to year variation? Also, why the grant? Also, we need to test FFD. 
 These results are somewhat surprising as budset is commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger budset and leading to relatively stable budset dates across years (Soolanayakanahally2013, and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset. Populations from the Second College Grant set buds approximately three days before those from the white mountains, but these differences statistically weak (Figure \ref{fig:vapar}b) and small. Our results suggest we need much more work on additional species, as results to date have focused mainly on one species (\emph{Populus balsamifera}) and more efforts to understand how environmental factors beyond photoperiod may affect budset. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role (Michelson2018).   
@@ -91,7 +91,7 @@ These results are somewhat surprising as budset is commonly thought to be strong
 % OLD text: The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely  .... The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
 
 %emwNov8: I did not update this paragraph much. 
-High variation across species in both their leafout and budset timing lead to species to drive most variation in  growing season length  ($\sigma_{species}$: 14.38, $UI_{95}$[9.85,20.81], with less variation among years ($\sigma_{year}$: 4.67 $UI_{95}$[0.76,8.63], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$: 2.50, $UI_{95}$[0.19,2.82], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
+High variation across species in both their leafout and budset timing lead to species to drive most variation in  growing season length  ($\sigma_{species}$:14.54, $UI_{95}$[9.81,21.25], with less variation among years ($\sigma_{year}$:4.53$UI_{95}$[0.78,14.79], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$:2.43, $UI_{95}$[0.19,8.37], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
 
 
 \emph{Ecological and forecasting implications}\\
