--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -35,11 +35,63 @@
 \begin{document}
 \SweaveOpts{concordance=TRUE}
 
+
 \maketitle
 %\setlength{\parskip}{0.5pt} % 1ex plus 0.5ex minus 0.2ex}
 \setlength{\parindent}{0pt}
 
 %cjc2024Sept25: I think Lizzie and Deirdre already hit the highlights for the Intro for now. I agree that there are paragraphs that need to be moved to the Results and Discussion (anything that includes the figures). I also think you need to set up the experiement a bit better in why it's so cool. A little more development on the latitudinal gradient would be good, even if the results aren't exciting, it'd be great to set up our initial hypothesis more. And maybe get into trees vs shrubs and interannual variation. This was a massive endeavor, I want the reader to be excited about it. 
+
+<<label=numbers, echo=FALSE, results=hide, message=FALSE>>=
+rm(list=ls()) 
+options(stringsAsFactors = FALSE)
+require(brms,quietly = TRUE)
+load("..//analyses/cgseasonmods.Rda")
+corrr<-round(cor.test(use.data$leafout,use.data$budset)[4]$estimate,2)
+corrr.low<-round(cor.test(use.data$leafout,use.data$budset)[9]$conf.int[1],2)
+corrr.high<-round(cor.test(use.data$leafout,use.data$budset)[9]$conf.int[2],2)
+
+sig.sp<-round(summary(mod.lo)[17]$random$spp[1],2)
+sig.sp.l<-round(summary(mod.lo)[17]$random$spp[3],2)
+sig.sp.h<-round(summary(mod.lo)[17]$random$spp[4],2)
+
+sig.yr<-round(summary(mod.lo)[17]$random$year[1],2)
+sig.yr.l<-round(summary(mod.lo)[17]$random$year[3],2)
+sig.yr.h<-round(summary(mod.lo)[17]$random$year[4],2)
+
+sig.pop<-round(summary(mod.lo)[17]$random$site[1],2)
+sig.pop.l<-round(summary(mod.lo)[17]$random$site[3],2)
+sig.pop.h<-round(summary(mod.lo)[17]$random$site[4],2)
+
+bs.sig.sp<-round(summary(mod.bs)[17]$random$spp[1],2)
+bs.sig.sp.l<-round(summary(mod.bs)[17]$random$spp[3],2)
+bs.sig.sp.h<-round(summary(mod.bs)[17]$random$spp[4],2)
+
+
+bs.sig.yr<-round(summary(mod.bs)[17]$random$year[1],2)
+bs.sig.yr.l<-round(summary(mod.bs)[17]$random$year[3],2)
+bs.sig.yr.h<-round(summary(mod.bs)[17]$random$year[4],2)
+
+bs.sig.pop<-round(summary(mod.bs)[17]$random$site[1],2)
+bs.sig.pop.l<-round(summary(mod.bs)[17]$random$site[3],2)
+bs.sig.pop.h<-round(summary(mod.bs)[17]$random$site[4],2)
+
+gs.sig.sp<-round(summary(mod.pgs)[17]$random$spp[1],2)
+gs.sig.sp.l<-round(summary(mod.pgs)[17]$random$spp[3],2)
+gs.sig.sp.h<-round(summary(mod.pgs)[17]$random$spp[4],2)
+
+
+gs.sig.yr<-round(summary(mod.pgs)[17]$random$year[1],2)
+gs.sig.yr.l<-round(summary(mod.pgs)[17]$random$year[3],2)
+gs.sig.yr.h<-round(summary(mod.pgs)[17]$random$year[4],2)
+
+gs.sig.pop<-round(summary(mod.pgs)[17]$random$site[1],2)
+gs.sig.pop.l<-round(summary(mod.pgs)[17]$random$site[3],2)
+gs.sig.pop.h<-round(summary(mod.pgs)[17]$random$site[4],2)
+
+
+@
+
 
 \section{Introduction}
 Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, net carbon uptake is primarily determined by the length of the growing season \citep{White1999}. Most models of carbon storage assume that earlier spring leafout with climate change will drive longer seasons and increased carbon storage, in part offsetting future warming \citep{Churkina2005,White1999,Keenan2014}. Recent findings, however, have called this critical assumption into question. 
@@ -63,9 +115,9 @@ We address this using rarely available plant-scale data---phenological observati
 %emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
 %dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
 
-We found an apparently fundamental---and unexpected trade-off---between early, longer growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearsons correlation coefficient of 0.32 $CI_{95}$[0.25, 0.39]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal, or meteorological, growing season, defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023} (Figure \ref{fig:thermcal}c). 
+We found an apparently fundamental---and unexpected trade-off---between early, longer growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearsons correlation coefficient of \Sexpr{corrr} $CI_{95}$[\Sexpr{corrr.low}, \Sexpr{corrr.high}]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal, or meteorological, growing season, defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023} (Figure \ref{fig:thermcal}c). 
 
-These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity \citep{Zani2020}. Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig XXa). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,camarero2022decoupled,dow2022warm,silvestro2023longer}. % cites from noeviany in whathappened.R in grephon repo
+These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity \citep{Zani2020}. Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig: \ref{fig:concept}a,\ref{fig:vapar}). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,camarero2022decoupled,dow2022warm,silvestro2023longer}. % cites from noeviany in whathappened.R in grephon repo
 %The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
 % The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. 
 
@@ -77,9 +129,9 @@ We can see these dynamics play out by tracking the phenology of four individuals
 \emph{Variation in leafout and budset}\\
 
 %emwDec15:  If we need it -- CITES here could be our NCC paper this year (Nacho 2024) and/or Deirdre's paper specifically estimates year to year variability, but I would be happy for less self-citing if we have other equally good refs
-Our common garden captured high variation in both leafout and budset, allowing us to examine how the two correlate, but also providing important insights into how both vary across species, populations and years. Consistent with a high number of studies finding species and year-to-year environmental variation drive leafout variation (CITES), we found high variance in leafout timing among species and years ($\sigma_{species}$: 8.23 $UI_{95}$[5.22,12.81], $\sigma_{year}$:10.49 $UI_{95}$[4.27,24.60], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.62, $UI_{95}$[0.02,2.82], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). %emwNov8: Add something to this paragraph that basically says: this jives with the whole climate change literature documenting big differences in spring and also with meta-analyses of common garden studies (Aitken and Bemmels, me and Zeng) that find leafout is not structured by population. 
+Our common garden captured high variation in both leafout and budset, allowing us to examine how the two correlate, but also providing important insights into how both vary across species, populations and years. Consistent with a high number of studies finding species and year-to-year environmental variation drive leafout variation (CITES), we found high variance in leafout timing among species and years ($\sigma_{species}$:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], $\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). %emwNov8: Add something to this paragraph that basically says: this jives with the whole climate change literature documenting big differences in spring and also with meta-analyses of common garden studies (Aitken and Bemmels, me and Zeng) that find leafout is not structured by population. 
 
-Spring phenological phases are reported to be more plastic than autumn ones (CITES), but we found that, relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$: 9.81 $UI_{95}$[ 6.61,14.49], $\sigma_{year}$: 14.92 $UI_{95}$[5.68,9.21], $\sigma_{population}$: 2.35, $UI_{95}$[0.23,8.51], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population). Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Following trends leafout and our finding that earlier leafout correlates with earlier budset, 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
+Spring phenological phases are reported to be more plastic than autumn ones (CITES), but we found that, relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$:\Sexpr{bs.sig.sp} $UI_{95}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], $\sigma_{year}$:\Sexpr{bs.sig.yr} $UI_{95}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], $\sigma_{population}$:\Sexpr{bs.sig.pop}, $UI_{95}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population). Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Following trends leafout and our finding that earlier leafout correlates with earlier budset, 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
 
 %emwNov8: Can we put this 3 day number (below paragraph) in context compared to year to year variation? Also, why the grant? Also, we need to test FFD. 
 These results are somewhat surprising as budset is commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger budset and leading to relatively stable budset dates across years (Soolanayakanahally2013, and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset. Populations from the Second College Grant set buds approximately three days before those from the white mountains, but these differences statistically weak (Figure \ref{fig:vapar}b) and small. Our results suggest we need much more work on additional species, as results to date have focused mainly on one species (\emph{Populus balsamifera}) and more efforts to understand how environmental factors beyond photoperiod may affect budset. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role (Michelson2018).   
@@ -87,7 +139,7 @@ These results are somewhat surprising as budset is commonly thought to be strong
 % OLD text: The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely  .... The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
 
 %emwNov8: I did not update this paragraph much. 
-High variation across species in both their leafout and budset timing lead to species to drive most variation in  growing season length  ($\sigma_{species}$: 14.38, $UI_{95}$[9.85,20.81], with less variation among years ($\sigma_{year}$: 4.67 $UI_{95}$[0.76,8.63], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$: 2.50, $UI_{95}$[0.19,2.82], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
+High variation across species in both their leafout and budset timing lead to species to drive most variation in  growing season length  ($\sigma_{species}$:\Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}], with less variation among years ($\sigma_{year}$:\Sexpr{gs.sig.yr}$UI_{95}$[\Sexpr{gs.sig.yr.l},\Sexpr{gs.sig.yr.h}], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$:\Sexpr{gs.sig.pop}, $UI_{95}$[\Sexpr{gs.sig.pop.l},\Sexpr{gs.sig.pop.h}], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
 
 
 \emph{Ecological and forecasting implications}\\
